Fix TopicService test stubbing